--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Overseer</string>
+    <string name="permission_description">SOME PERMISSIONS ARE REQUIRED TO BE ALLOWED FOR THE APP TO BE FUNCTIONAL, PLEASE ENABLE THE PERMISSIONS BY CLICKING THE BUTTON BELOW.</string>
     <string name="tac">Certainly! Below is a sample Terms and Conditions for your app, which is focused on tracking screen time but does not monitor specific app activities. Please ensure that the terms are reviewed by a legal professional to ensure compliance with relevant laws.
 
 Terms and Conditions
